syntax = "proto3";

import "common/money.proto";

package scow.server;

// NOT_FOUND: the user is not in the account
message SetJobChargeLimitRequest {
  string tenant_name = 1;
  string account_name = 2;
  string user_id = 3;
  common.Money limit = 4;
}

message SetJobChargeLimitReply {}

// NOT_FOUND: the user is not in the account || the user doesn't have a charge
// limit
message CancelJobChargeLimitRequest {
  string tenant_name = 1;
  string account_name = 2;
  string user_id = 3;
}

message CancelJobChargeLimitReply {}

service JobChargeLimitService {

  rpc SetJobChargeLimit(SetJobChargeLimitRequest)
      returns (SetJobChargeLimitReply);

  rpc CancelJobChargeLimit(CancelJobChargeLimitRequest)
      returns (CancelJobChargeLimitReply);
}
